enforced list synchronisation