@@ -8,11 +8,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>24</source>
-          <target>24</target>
-          <compilerArgs>
-            --enable-preview
-          </compilerArgs>
+          <source>25</source>
+          <target>25</target>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
         <version>3.8.1</version>
@@ -21,7 +18,6 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>--enable-preview</argLine>
           <excludes>
             <exclude>**/*TestShould.java</exclude>
           </excludes>
